fixes the scrollbars

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -12,7 +12,7 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    overflow-y: scroll;
+    overflow: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     padding-bottom: $font-size--huge;
     @include breakpoint(map-get($break, medium))  {
@@ -23,7 +23,7 @@
 
 // Basic panel layout
 %panel {
-    overflow-y: scroll;
+    overflow: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     position: relative;
     width: 100%;
@@ -79,6 +79,7 @@
         height: auto;
         top: 0;
     }
+    overflow-y: scroll;
 }
 
 // Bottom half panel is pushed 100vh down
