--- a/scss/pages/_perso.scss
+++ b/scss/pages/_perso.scss
@@ -16,6 +16,11 @@
 	}
 }
 
+.me-skills,
+.me-about {
+	overflow-y: scroll;
+}
+
 
 
 
